--- a/index.html
+++ b/index.html
@@ -14,13 +14,60 @@
     <main>
         <div>
         <ul id="color-palette">
-           <li id="black" class="color"></li>
+           <li id="black" class="color selected"></li>
            <li id="red" class="color"></li> 
             <li id="blue" class="color"></li> 
              <li id="green" class="color"></li>
         </ul>
-        </div> 
-        
+        </div>
+        <div>
+            <ul id="pixel-board">
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>         
+        </div>
+        <div>
+            <ul id="pixel-board">
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>         
+        </div>
+        <div>
+            <ul id="pixel-board">
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>         
+        </div>
+        <div>
+            <ul id="pixel-board">
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>         
+        </div>
+        <div>
+            <ul id="pixel-board">
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>         
+        </div>
+
+
+
     </main>
     <script src="script.js"></script> 
     
