Requisito 8 realizado; alterando estrutura das li no html

--- a/index.html
+++ b/index.html
@@ -20,53 +20,43 @@
              <li id="green" class="color"></li>
         </ul>
         </div>
-        <div>
-            <ul id="pixel-board">
+        <div id="pixel-board">
+            <ul>
                 <li class="pixel"></li>
                 <li class="pixel"></li>
                 <li class="pixel"></li>
                 <li class="pixel"></li>
                 <li class="pixel"></li>
-            </ul>         
+            </ul>
+            <ul>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>
+            <ul>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>
+            <ul>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>
+            <ul>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </ul>
         </div>
-        <div>
-            <ul id="pixel-board">
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </ul>         
-        </div>
-        <div>
-            <ul id="pixel-board">
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </ul>         
-        </div>
-        <div>
-            <ul id="pixel-board">
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </ul>         
-        </div>
-        <div>
-            <ul id="pixel-board">
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </ul>         
-        </div>
-
-
 
     </main>
     <script src="script.js"></script> 
