--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li id="blue" class="color"></li> 
              <li id="green" class="color"></li>
         </ul>
+        <button id="clear-board">Limpar</button>
         </div>
         <div id="pixel-board">
             <ul>
