--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
              <li id="green" class="color"></li>
         </ul>
         <button id="clear-board">Limpar</button>
+        <input type="number" min="1" max="50" id="board-size"/>
+        <button id="generate-board">VQV</button>         
         </div>
         <div id="pixel-board">
             <ul>
@@ -57,11 +59,8 @@
                 <li class="pixel"></li>
                 <li class="pixel"></li>
             </ul>
-        </div>
-
+        </div> 
     </main>
-    <script src="script.js"></script> 
-    
-    
+    <script src="script.js"></script>    
 </body>
 </html>
