--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,19 +9,20 @@
 </head>
 <body>
     <header>
-        <h1 id="title">Paleta de Cores</h1> 
+        <h1 id="title">Paleta de Cores</h1>
     </header>
     <main>
         <div>
         <ul id="color-palette">
-           <li id="black" class="color selected"></li>
-           <li id="red" class="color"></li> 
-            <li id="blue" class="color"></li> 
-             <li id="green" class="color"></li>
-        </ul>
+           <li id="black" class="color selected"></li> 
+             <li id="cor2" class="color"></li>
+            <li id="cor3" class="color"></li>
+             <li id="cor4" class="color"></li> 
+         </ul> 
+        </div>
         <button id="clear-board">Limpar</button>
         <input type="number" min="1" max="50" id="board-size"/>
-        <button id="generate-board">VQV</button>         
+        <button id="generate-board">VQV</button> 
         </div>
         <div id="pixel-board">
             <ul>
@@ -59,8 +60,8 @@
                 <li class="pixel"></li>
                 <li class="pixel"></li>
             </ul>
-        </div> 
+        </div>
     </main>
-    <script src="script.js"></script>    
+    <script src="script.js"></script>
 </body>
 </html>
